# email_auto_response_freamework

./: Open Dashboard.bat  README.md  Run Auto Reply Now.bat  Test Auto Reply (Dry Run).bat  config.py  gmail_client.py  pyproject.toml  reply_system_prompt.example.txt  requirements.txt  responder_rules.example.json  rules.py
scripts/: register_auto_run.ps1  run_responder.ps1  start_dashboard.ps1
src/gmail_autoresponder/: __init__.py  cli.py  dashboard.py  models.py  responder.py  storage.py
